# translate

./: .buildinfo  .gitignore  404.html  CHANGES  LICENSE  LICENSE.md  README.md  index.html  pyproject.toml  sitemap.xml
.doctrees/: environment.pickle  index.doctree
.doctrees/development/: index.doctree
.doctrees/guide/: index.doctree  markdown.doctree  style.doctree
.doctrees/setup/: index.doctree
.doctrees/translate/: index.doctree  language.doctree  migrate.doctree
development/: index.html
development/release/: index.html
download/LICENSE/: index.html
example/: .gitignore  Makefile  README.md  build.xml  config.yml  download.py  mkdocs.yml  translate.yml
example/docs/: index.md
example/docs/development/: index.md  release.md
example/docs/guide/: include_code_md.txt  include_code_rst.txt  include_md.txt  index.md  markdown.md  style.md
example/docs/guide/files/: copy_me  download.txt  record.xml  vision_statement.txt
example/docs/setup/: index.md
example/docs/setup/download/: download.txt
example/docs/setup/files/: translate.yml
example/docs/translate/: index.md  language.md  migrate.md
example/overrides/assets/stylesheets/: extra.css
example/source/: build.xml  conf.py  index.rst
example/source/development/: index.rst  release.rst
example/source/guide/: include_code_md.txt  include_md.txt  include_rst.txt  index.rst  markdown.rst  style.rst
example/source/setup/: index.rst
example/source/translate/: index.rst  language.rst  migrate.rst
guide/: custom_icon_rst.txt  index.html  inline.txt
guide/download/LICENSE/: index.html
guide/files/: download.txt
guide/markdown/: index.html
guide/style/: index.html
mkdocs_translate/: __init__.py  __main__.py  cli.py  config.yml  requirements.txt  translate.py
search/: search_index.json
setup/: index.html
setup/download/: download.py  mkdocs.yml
tests/: test_directive.py  test_postprocess_markdown.py
translate/: index.html
translate/language/: index.html
translate/migrate/: index.html
